Kubernetes/k8s_deployment/service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-np
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
    - port: 80
      targetPort: 80
