Kubernetes/k8s_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app
  ports:
    - port: 80
      targetPort: 80
